# app/Http/Controllers/Annotations/GestionarticleAnnotationController.php
@@ -45,7 +45,7 @@ namespace App\Http\Controllers\Annotations ;
 
 
  * @OA\GET(
- *     path="/api/article_Détail/{id}",
+ *     path="/api/article/{id}",
  *     summary="détail d'un article",
  *     description="",
  *         security={
@@ -58,17 +58,6 @@ namespace App\Http\Controllers\Annotations ;
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\MediaType(
- *             mediaType="multipart/form-data",
- *             @OA\Schema(
- *                 type="object",
- *                 properties={
- *                 },
- *             ),
- *         ),
- *     ),
  *     tags={"gestion article"},
 *),
 
