# app/Http/Controllers/Annotations/GestionvnementAnnotationController.php
@@ -26,7 +26,7 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\GET(
- *     path="/api/evenement_Détail/{id}",
+ *     path="/api/evenement/{id}",
  *     summary="voire detail d'un événement",
  *     description="",
  *         security={
@@ -39,17 +39,6 @@ namespace App\Http\Controllers\Annotations ;
  * ),
  *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
  * ),
- *     @OA\RequestBody(
- *         required=true,
- *         @OA\MediaType(
- *             mediaType="multipart/form-data",
- *             @OA\Schema(
- *                 type="object",
- *                 properties={
- *                 },
- *             ),
- *         ),
- *     ),
  *     tags={"gestion événement"},
 *),
 
